--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["aim"]
+packages = ["src/aim_cli", "src/aim_bot", "src/aim_server", "src/dreamer", "src/dream_agent", "src/dream_watcher"]
 
 [tool.pytest.ini_options]
 testpaths = [
